--- a/angular.json
+++ b/angular.json
@@ -28,9 +28,13 @@
               "src/assets"
             ],
             "styles": [
+              "C:/Users/hamzalistic/Desktop/application/node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/font-awesome/css/font-awesome.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+
+            ]
           },
           "configurations": {
             "production": {
